namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-people-on-probation-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-people-on-probation-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hmpps_people_on_probation"
    cloud-platform.justice.gov.uk/application: "People on probation"
    cloud-platform.justice.gov.uk/owner: "Manage my community service: manage.community.sentence@notifications.service.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-people-on-probation-ui.git,https://github.com/ministryofjustice/hmpps-people-on-probation-api.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-people-on-probation-platform-devs"
    cloud-platform.justice.gov.uk/review-after: ""
